# CafeFM

./: .gitignore  CafeFM.sln  CafeFM.vcxproj  cafefm.rc  meson.build  resource.h
bindings/: Generic_MIDI_default_b879c90ec74b4dfc.bnd  Ocarina_1fc57a32f35251ad.bnd  PC_Keyboard,_2_layer_piano_42426b839af81214.bnd
src/: about.hh  action.cc  action.hh  audio.cc  audio.hh  bindings.cc  bindings.hh  cafefm.cc  cafefm.hh  control_context.cc  control_context.hh  control_state.cc  control_state.hh  encoder.cc  encoder.hh  filter.cc  filter.hh  fm.cc  fm.hh  func.hh  helpers.cc  helpers.hh  instrument.cc  instrument.hh  instrument_state.cc  instrument_state.hh  io.cc  io.hh  looper.cc  looper.hh  main.cc  mimicker.cc  mimicker.hh  options.cc  options.hh  pitch_detection.cc  pitch_detection.hh  synth_state.cc  synth_state.hh  visualizer.cc  (+1 more)
src/controller/: controller.cc  controller.hh  gamecontroller.cc  gamecontroller.hh  joystick.cc  joystick.hh  keyboard.cc  keyboard.hh  microphone.cc  microphone.hh  midi.cc  midi.hh
